--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-dev-client": "~55.0.10",
     "expo-font": "~55.0.4",
     "expo-linking": "~55.0.7",
+    "expo-location": "~55.1.2",
     "expo-router": "~55.0.3",
     "expo-splash-screen": "~55.0.10",
     "expo-status-bar": "~55.0.4",
