--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native": "0.83.2",
     "react-native-css": "^3.0.4",
     "react-native-google-maps-plus": "1.11.0",
-    "react-native-nitro-modules": "^0.33.9",
+    "react-native-nitro-modules": "0.32.0",
     "react-native-reanimated": "4.2.1",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.23.0",
